# unitest

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  README.md  parse_hex_string.py  register_capture.c  sample_asm.asm  sample_desc.md  samplejson.json  test  test.c
docs/: developer_guide.md  user_guide.md
elf/: add_0.asm  add_0_result  add_0_x86  test_avx512_5_dynamic  test_vaes_bin  test_vaes_dynamic
mmaptest/: int3_ptrace_capture.c  int3_ptrace_two_breaks.c  ptrace_fixed_addrs  ptrace_fixed_addrs.c  register_capture.c
sample/: memory_test.asm  reg_init_test.asm  simple_test.asm
samples/: init.asm
src/: cli.rs  compiler.rs  elf.rs  error.rs  executor.rs  lib.rs  linker.rs  main.rs  parser.rs  types.rs
tests/: cli_test_plan.md  compiler_test_plan.md  elf_test_plan.md  executor_test_plan.md  integration_test.rs  linker_test_plan.md  parser_test_plan.md  test_plan.md
