[package]
name = "x86-asm-test"
version = "0.1.0"
edition = "2021"
authors = ["chihao@iscas.ac.cn"]
description = "A framework for generating and executing x86 assembly test files as benchmarks for rv environment testing"
repository = "<placeholder>"
license = "MIT"
keywords = ["x86", "assembly", "testing", "benchmark"]
categories = ["development-tools::testing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
goblin = "0.6"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true